Problem solved for row wrap main 1 col view

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -316,7 +316,6 @@ body {
 
 .main {
     flex: 100% 1;
-    height: 100%;
     margin: 24px 40px 0px 31px;
 }
 
@@ -329,12 +328,22 @@ body {
     grid-template-columns: repeat(3, 1fr);
     grid-template-areas: 'card card card';
     gap: 24px;
-    padding-right: 30px;
+    padding-right: 20px;
     max-height: calc(100vh - 265px);
     min-height: 305px;
     overflow-y: auto;
 }
 
+.main__ul-flex {
+    flex: 687px 0 1;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 265px);
+    overflow-y: auto;
+    padding-right: 20px;
+}
 
 
 
@@ -515,6 +524,8 @@ body {
 
 /* 1 col style*/
 
+
+
 .main__card-subtitles {
     display: none;
 }
@@ -525,16 +536,9 @@ body {
 .main__ul-flex .main__line-two {
     display: none;
 }
-.main__ul-flex {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.main__ul-flex .main__card-button {
-    width: 697px;
-}
 
 .main__ul-flex .main__card {
+    flex: 100% 0 1;
     height: 538px;
     margin-bottom: 24px;
 }
